--- a/frontend/package.json
+++ b/frontend/package.json
@@ -113,7 +113,16 @@
   },
   "resolutions": {
     "node-notifier": "^10.0.1",
-    "canvas": "link:./node_modules/.cache/null"
+    "canvas": "link:./node_modules/.cache/null",
+    "ws": "^8.17.1",
+    "js-yaml": "^4.1.1",
+    "@babel/helpers": "^7.26.10",
+    "brace-expansion": "^2.0.2",
+    "sha.js": "^2.4.12",
+    "form-data": "^3.0.4",
+    "minimist": "^1.2.6",
+    "glob": "^11.1.0",
+    "tar-fs": "^3.1.1"
   },
   "_comment": "The 'defaults' and 'not ie 11' are needed to avoid build issues with maplibre-gl.",
   "browserslist": {
